--- a/MiTrabajo/package.json
+++ b/MiTrabajo/package.json
@@ -17,7 +17,8 @@
     },
     "homepage": "https://github.com/juanchehin/UpTask#readme",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "pug": "^3.0.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
