--- a/MiTrabajo/package.json
+++ b/MiTrabajo/package.json
@@ -18,7 +18,10 @@
     "homepage": "https://github.com/juanchehin/UpTask#readme",
     "dependencies": {
         "express": "^4.17.1",
-        "pug": "^3.0.2"
+        "mysql2": "^2.2.5",
+        "pug": "^3.0.2",
+        "sequelize": "^6.6.2",
+        "tedious": "^11.0.8"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
