--- a/MiTrabajo/package.json
+++ b/MiTrabajo/package.json
@@ -18,9 +18,12 @@
     "homepage": "https://github.com/juanchehin/UpTask#readme",
     "dependencies": {
         "express": "^4.17.1",
+        "express-validator": "^6.11.1",
         "mysql2": "^2.2.5",
         "pug": "^3.0.2",
         "sequelize": "^6.6.2",
+        "shortid": "^2.2.16",
+        "slug": "^5.0.1",
         "tedious": "^11.0.8"
     },
     "devDependencies": {
