--- a/MiTrabajo/package.json
+++ b/MiTrabajo/package.json
@@ -4,7 +4,9 @@
     "description": "Esta es una aplicacion llamda 'uptask' para el curso de nodejs - PILIS catamarca",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js"
+        "dev": "nodemon ./index.js",
+        "start": "concurrently \"npm run dev \" \"npm run watch \" ",
+        "watch": "webpack --w --mode development"
     },
     "repository": {
         "type": "git",
@@ -17,6 +19,8 @@
     },
     "homepage": "https://github.com/juanchehin/UpTask#readme",
     "dependencies": {
+        "axios": "^0.21.1",
+        "concurrently": "^6.2.0",
         "express": "^4.17.1",
         "express-validator": "^5.3.0",
         "mysql2": "^2.2.5",
@@ -24,9 +28,15 @@
         "sequelize": "^6.6.2",
         "shortid": "^2.2.16",
         "slug": "^5.0.1",
+        "sweetalert2": "^11.0.16",
         "tedious": "^11.0.8"
     },
     "devDependencies": {
-        "nodemon": "^2.0.7"
+        "@babel/core": "^7.14.3",
+        "@babel/preset-env": "^7.14.4",
+        "babel-loader": "^8.2.2",
+        "nodemon": "^2.0.7",
+        "webpack": "^5.38.1",
+        "webpack-cli": "^4.7.0"
     }
 }
