--- a/MiTrabajo/package.json
+++ b/MiTrabajo/package.json
@@ -4,9 +4,10 @@
     "description": "Esta es una aplicacion llamda 'uptask' para el curso de nodejs - PILIS catamarca",
     "main": "index.js",
     "scripts": {
+        "desarrollo": "concurrently \"npm run dev \" \"npm run watch \" ",
         "dev": "nodemon ./index.js",
-        "start": "concurrently \"npm run dev \" \"npm run watch \" ",
-        "watch": "webpack --w --mode development"
+        "start": "nodemon ./index.js",
+        "watch": "webpack -w --mode development"
     },
     "repository": {
         "type": "git",
@@ -20,10 +21,20 @@
     "homepage": "https://github.com/juanchehin/UpTask#readme",
     "dependencies": {
         "axios": "^0.21.1",
+        "bcrypt-nodejs": "0.0.3",
         "concurrently": "^6.2.0",
+        "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.5",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "express-session": "^1.17.2",
         "express-validator": "^5.3.0",
+        "html-to-text": "^7.1.1",
+        "juice": "^8.0.0",
         "mysql2": "^2.2.5",
+        "nodemailer": "^6.6.1",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "pug": "^3.0.2",
         "sequelize": "^6.6.2",
         "shortid": "^2.2.16",
